data/all_generated_tests/raw_wast_tests/br_table_EdgeCaseFailuresinbr_table_2501.wast
;; Here are 10 unique differential tests focused on edge case failures in the `br_table` instruction:  1. **Exceeding Maximum Index**:    ```plaintext    Test a `br_table` instruction with an operand index that exceeds the number of label targets, ensuring it defaults to the last label. This checks if arity mismatch errors are raised correctly when the index is larger than the provided label vector.

(assert_invalid
 (module
  (func $exceed-max-index
   (block 
    (br_table 0 0 1 (i32.const 5))
   )
  )
 )
 "unknown label"
)